Add support for MC 1.16